<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello_saya_novia">Halo, saya Novia</string>
    <string name="_09_00">09.00</string>
    <string name="_081234567890">081234567890</string>
    <string name="contact_1">Contact 1</string>
    <string name="delete_button">Tombol Hapus</string>
    <string name="edit_button">Tombol Ubah</string>
    <string name="edit_contact">Ubah Kontak</string>
    <string name="tanggal">Tanggal</string>
    <string name="ayah_penganiaya_anak_kandung_di_tangsel_ditangkap">Ayah Penganiaya Anak Kandung di Tangsel Ditangkap</string>
    <string name="gambar_berita">Gambar berita</string>
</resources>