<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:layout_gravity="center"
                app:cardCornerRadius="10dp">
                <ImageView
                    android:src="@color/novia_purple"
                    android:id="@+id/viewnews_imageView"
                    android:layout_width="125dp"
                    android:layout_height="79dp"
                    android:contentDescription="@string/gambar_berita" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:id="@+id/viewnews_judul_textview"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/novia_purple"
                    android:text="@string/ayah_penganiaya_anak_kandung_di_tangsel_ditangkap"/>
                <TextView
                    android:id="@+id/viewnews_date_textview"
                    android:layout_marginTop="14dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>