<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contact_row_swipe_layout"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="160dp"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/contact_row_edit"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@color/novia_blue"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/edit_button"
                android:src="@drawable/ic_baseline_edit_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_row_delete"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@color/novia_red"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete_button"
                android:src="@drawable/ic_baseline_delete_24" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/contact_row_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/novia_purple"
            android:src="@drawable/ic_baseline_person_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/contact_row_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/contact_1"
            android:textColor="@color/novia_purple"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/contact_row_img"
            app:layout_constraintTop_toTopOf="@id/contact_row_img" />

        <TextView
            android:id="@+id/contact_row_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="2dp"
            android:includeFontPadding="false"
            android:text="@string/_081234567890"
            android:textColor="@color/novia_purple"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/contact_row_name"
            app:layout_constraintTop_toBottomOf="@id/contact_row_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.daimajia.swipe.SwipeLayout>